# kirk

./: .gitignore  README.md  pyproject.toml
examples/: ollama_chatbot.py
kirk/: client.py  color.py  kirk.py  run.py  transporter.py
tests/: test_basic.py
