[project]
name = "kirk"
version = "0.1.0"
description = "Simple IRC client and curses UI"
readme = "README.md"
authors = [
    {name = "T. Franzel", email = "tfranzel@users.noreply.github.com"}
]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.21.0",
    "cryptography>=44.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501",   # long lines
    "E741",   # variables named i O l, get a proper editor font
    "SIM108", # ternary is not always better
]

[tool.mypy]
strict = true

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["kirk"]

[tool.hatch.build.targets.sdist]
only-include = ["kirk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
